Table users {
  id uuid [pk]
  email varchar [unique, not null]
  password varchar [not null]
  full_name varchar
  phone_number varchar
  role varchar [not null] // Enum: ADMIN, SELLER, CUSTOMER
  address varchar
  profile_picture_url varchar
  bio varchar
  gender varchar
  gst_number varchar
  shop_name varchar
  is_approved boolean
  is_blocked boolean
  pan_number varchar
  bank_account_number varchar
  ifsc_code varchar
  bank_name varchar
  account_holder_name varchar
  is_bank_verified boolean [default: false]
  is_deleted boolean [default: false]
  created_at timestamp
  updated_at timestamp
}

Table addresses {
  id uuid [pk]
  user_id uuid [ref: > users.id]
  street varchar
  city varchar
  state varchar
  zip_code varchar
  country varchar
  is_default boolean
}

Table seller_kyc {
  id uuid [pk]
  user_id uuid [unique, ref: - users.id]
  pan_masked varchar
  pan_verified boolean [default: false]
  aadhaar_masked varchar
  aadhaar_verified boolean [default: false]
  gstin varchar
  gst_verified boolean [default: false]
  kyc_status varchar [not null] // Enum
  rejection_reason varchar
  created_at timestamp
  updated_at timestamp
}

Table products {
  id uuid [pk]
  name varchar [not null]
  description varchar(2000)
  price decimal [not null]
  discount_price decimal
  stock_quantity int
  material varchar
  color varchar
  size varchar
  origin varchar
  pack_of varchar
  reel_url varchar
  reel_caption text
  category_id uuid [ref: > categories.id]
  seller_id uuid [ref: > users.id]
  is_approved boolean
  average_rating double [default: 0.0]
  total_reviews int [default: 0]
  created_at timestamp
  updated_at timestamp
}

Table categories {
  id uuid [pk]
  name varchar [unique, not null]
  description varchar
}

Table product_images {
  id uuid [pk]
  image_url varchar [not null]
  position int
  product_id uuid [ref: > products.id]
}

Table orders {
  id uuid [pk]
  user_id uuid [ref: > users.id]
  seller_id uuid [ref: > users.id]
  total_amount decimal [not null]
  status varchar // Enum
  shipping_address varchar
  payment_method varchar
  payment_id varchar
  address_id uuid
  courier_name varchar
  tracking_id varchar
  invoice_sent boolean [default: false]
  invoice_sent_at timestamp
  invoice_number varchar
  created_at timestamp
  updated_at timestamp
}

Table order_items {
  id uuid [pk]
  order_id uuid [ref: > orders.id]
  product_id uuid [ref: > products.id]
  quantity int
  price decimal
}

Table payments {
  id uuid [pk]
  seller_id uuid [ref: > users.id]
  amount decimal
  status varchar // Enum
  transaction_id varchar
  created_at timestamp
}

Table carts {
  id uuid [pk]
  user_id uuid [ref: - users.id]
  total_amount decimal
}

Table cart_items {
  id uuid [pk]
  cart_id uuid [ref: > carts.id]
  product_id uuid [ref: > products.id]
  quantity int
  price decimal
}

Table wishlists {
  id uuid [pk]
  user_id uuid [ref: - users.id]
}

Table wishlist_products {
  wishlist_id uuid [ref: > wishlists.id]
  product_id uuid [ref: > products.id]
}

Table reviews {
  id uuid [pk]
  product_id uuid [ref: > products.id]
  order_item_id uuid [unique, ref: - order_items.id]
  user_id uuid [ref: > users.id]
  rating int [not null]
  review_text varchar(1000)
  created_at timestamp
  updated_at timestamp
}

Table review_images {
  id uuid [pk]
  review_id uuid [ref: > reviews.id]
  image_url varchar [not null]
}

Table reel_comments {
  id uuid [pk]
  reel_id uuid [ref: > products.id]
  user_id uuid [ref: > users.id]
  content varchar(1000) [not null]
  parent_id uuid [ref: > reel_comments.id]
  seller_response boolean [default: false]
  created_at timestamp
}

Table reel_likes {
  id uuid [pk]
  reel_id uuid [ref: > products.id]
  user_id uuid [ref: > users.id]
  created_at timestamp
  indexes {
    (reel_id, user_id) [unique]
  }
}

Table seller_followers {
  id uuid [pk]
  seller_id uuid [ref: > users.id]
  user_id uuid [ref: > users.id]
  created_at timestamp
  indexes {
    (seller_id, user_id) [unique]
  }
}

Table notifications {
  id uuid [pk]
  user_id uuid [ref: > users.id] // Recipient
  sender_id uuid [ref: > users.id]
  message varchar(500) [not null]
  type varchar [not null] // Enum
  is_read boolean [default: false]
  order_id uuid
  reel_id uuid
  comment_id uuid
  created_at timestamp
}

Table chat_sessions {
  id uuid [pk]
  user_id uuid // Nullable
  user_role varchar [not null]
  is_active boolean
  current_intent varchar
  current_step_id varchar
  selected_order_id uuid
  created_at timestamp
}

Table chat_messages {
  id uuid [pk]
  session_id uuid [ref: > chat_sessions.id]
  sender varchar [not null]
  message text [not null]
  options text
  payload text
  sent_at timestamp
}

Table return_requests {
  id uuid [pk]
  order_item_id uuid [unique, ref: - order_items.id]
  customer_id uuid [ref: > users.id]
  seller_id uuid [ref: > users.id]
  reason varchar [not null]
  description varchar(1000)
  type varchar [not null] // Enum
  status varchar [not null] // Enum
  proof_image_url varchar
  seller_remarks varchar
  created_at timestamp
  updated_at timestamp
}

Table seller_earnings {
  id uuid [pk]
  seller_id uuid [ref: > users.id]
  order_id uuid [ref: > orders.id]
  order_item_id uuid [unique, ref: - order_items.id]
  gross_amount decimal [not null]
  commission decimal [not null]
  gst_amount decimal [not null]
  net_amount decimal [not null]
  payout_status varchar [not null]
  payout_id uuid // ref to payout table if exists
  created_at timestamp
}
